removed buggy scrollbar

--- a/src/components/Pages/hackathon/styles/hero.module.css
+++ b/src/components/Pages/hackathon/styles/hero.module.css
@@ -10,7 +10,7 @@ figure {
 }
 
 /* Hero section background */
-.background {
+/* .background {
     position: fixed;
     top: 0;
     left: 0;
@@ -18,7 +18,7 @@ figure {
     width: 100svw;
     height: 100svh;
     object-fit: cover;
-}
+} */
 
 /* Header for logos */
 .header {
@@ -84,7 +84,7 @@ figure {
     align-items: center;
     flex-direction: column;
     position: relative;
-    padding: 5rem 0;
+    padding: 2rem 0;
 }
 
 .arrow {
@@ -92,6 +92,13 @@ figure {
     position: absolute;
     left: 10rem;
     top: 1rem;
+}
+
+.applybutton {
+    position: relative;
+    height: 44px; 
+    width: 312px;
+    z-index: 999999;
 }
 
 .dateContainer {
@@ -143,6 +150,7 @@ a {
     align-items: center;
     justify-content: space-between;
     padding: 0 5rem 0.5rem 5rem;
+    z-index: 9999999;
 }
 
 .spreadLine {
@@ -150,6 +158,11 @@ a {
     border-radius: 1rem;
     height: 0.25rem;
     width: 8rem;
+}
+
+.apply-button {
+    position: relative;
+    z-index: 9999999;
 }
 
 /* Media query for medium screens (tablets) */
